[463235] adds debugger tooling feature
Change-Id: I8a34681d86f26ca9e595e1e79170b86cb8de3c1d

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -269,6 +269,7 @@
 				<module>../../plugins/org.eclipse.incquery.viewers.runtime.zest</module>
 				<module>../../plugins/org.eclipse.incquery.viewers.tooling.ui.zest</module>
 				<module>../../tests/org.eclipse.incquery.patternlanguage.tests</module>
+				<module>../../plugins/org.eclipse.incquery.tooling.debug</module>				
 				<module>../../tests/org.eclipse.incquery.patternlanguage.emf.tests</module>
 				<module>../../tests/org.eclipse.incquery.runtime.tests</module>
 				<module>../../tests/org.eclipse.incquery.runtime.base.itc.tests</module>
@@ -297,6 +298,7 @@
 				<module>../../features/org.eclipse.incquery.viewers.runtime.zest.feature</module>
 				<module>../../features/org.eclipse.incquery.viewers.tooling.ui.feature</module>
 				<module>../../features/org.eclipse.incquery.viewers.tooling.ui.zest.feature</module>
+				<module>../../features/org.eclipse.incquery.debugger.tooling.feature</module>				
 				<module>../../releng/org.eclipse.incquery.update</module>
 				<module>../../releng/org.eclipse.incquery.update.extras</module>
 			</modules>
