--- a/releng/org.eclipse.incquery.update.extras/pom.xml
+++ b/releng/org.eclipse.incquery.update.extras/pom.xml
@@ -66,4 +66,11 @@
 			</build>
 		</profile>
 	</profiles>
+	<repositories>
+		<repository>
+			<id>eclipse-juno</id>
+			<url>http://download.eclipse.org/releases/juno</url>
+			<layout>p2</layout>
+		</repository>
+	</repositories>
 </project>
