[461516] Fix .gitignore and plugin.xml

--- a/plugins/org.eclipse.incquery.runtime.rete.recipes/plugin.xml
+++ b/plugins/org.eclipse.incquery.runtime.rete.recipes/plugin.xml
@@ -11,7 +11,7 @@
       <package
             uri="http://www.eclipse.org/incquery/rete/recipes"
             class="org.eclipse.incquery.runtime.rete.recipes.RecipesPackage"
-            genModel="model/rete-recipes.xcore"/>
+            genModel="model/rete-recipes.genmodel"/>
    </extension>
 
 </plugin>
