--- a/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
@@ -9,5 +9,130 @@
             class="org.eclipse.incquery.viewers.runtime.model.NotationPackage"
             genModel="model/notation.genmodel"/>
    </extension>
-
+   <extension
+         point="org.eclipse.incquery.patternlanguage.annotation">
+      <annotation
+            additionalValidator="org.eclipse.incquery.viewers.runtime.validators.ItemValidator"
+            description="An element to display in a JFace viewer"
+            name="Item">
+         <annotationparameter
+               description="The pattern parameter the Item will represent in the viewer."
+               mandatory="true"
+               multiple="false"
+               name="item"
+               type="variablereference">
+         </annotationparameter>
+         <annotationparameter
+               description="The label to describe the item. The message may refer the parameter variables between $ symbols, or their EMF features, such as in $Param1.name$."
+               mandatory="false"
+               multiple="false"
+               name="label"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="Describes whether an item should display only as &apos;root&apos; (top-level) element, only as &apos;child&apos; (not root but as a child) or only  as &apos;port&apos; (hierarchic graph viewers) or &apos;always&apos;."
+               mandatory="false"
+               multiple="false"
+               name="hierarchy"
+               type="string">
+         </annotationparameter>
+      </annotation>
+      <annotation
+            description="An annotation describing a containment relation between two items."
+            name="ContainsItem">
+         <annotationparameter
+               description="The pattern parameter representing the container. Must refer an EObject."
+               mandatory="true"
+               multiple="false"
+               name="container"
+               type="variablereference">
+         </annotationparameter>
+         <annotationparameter
+               description="The pattern parameter referring to a contained element. Must refer to an EObject."
+               mandatory="true"
+               multiple="false"
+               name="item"
+               type="variablereference">
+         </annotationparameter>
+      </annotation>
+      <annotation
+            additionalValidator="org.eclipse.incquery.viewers.runtime.validators.EdgeValidator"
+            description="Represents a custom, directed edge between GuiItems. Not supported by all viewers."
+            name="Edge">
+         <annotationparameter
+               description="A label for the edge."
+               mandatory="false"
+               multiple="false"
+               name="label"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="The pattern parameter representing the source item of the edge. Must refer to an EObject."
+               mandatory="true"
+               multiple="false"
+               name="source"
+               type="variablereference">
+         </annotationparameter>
+         <annotationparameter
+               description="The pattern parameter representing the target item of the edge. Must refer to an EObject."
+               mandatory="true"
+               multiple="false"
+               name="target"
+               type="variablereference">
+         </annotationparameter>
+      </annotation>
+      <annotation
+            description="Formatting specification for Items and Edges"
+            name="Format">
+         <annotationparameter
+               description="The main color definition in CSS format (#RRGGBB)"
+               mandatory="false"
+               multiple="false"
+               name="color"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="The line color setting in CSS format (#RRGGBB)."
+               mandatory="false"
+               multiple="false"
+               name="lineColor"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="The text color setting in CSS format (#RRGGBB)."
+               mandatory="false"
+               multiple="false"
+               name="textColor"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="The width of the line in pixels. Only available for Edges."
+               mandatory="false"
+               multiple="false"
+               name="lineWidth"
+               type="int">
+         </annotationparameter>
+         <annotationparameter
+               description="The style of the line (solid, dashed, dotted, dashdot)."
+               mandatory="false"
+               multiple="false"
+               name="lineStyle"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="The style of the line&apos;s arrow at the source end (none, standard, diamond, triangle). Only available for Edges."
+               mandatory="false"
+               multiple="false"
+               name="arrowSourceEnd"
+               type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="The style of the line&apos;s arrow at the target end (none, standard, diamond, triangle). Only available for Edges."
+               mandatory="false"
+               multiple="false"
+               name="arrowTargetEnd"
+               type="string">
+         </annotationparameter>
+      </annotation>
+   </extension>
 </plugin>
