--- a/plugins/org.eclipse.viatra.dse.base/pom.xml
+++ b/plugins/org.eclipse.viatra.dse.base/pom.xml
@@ -10,4 +10,11 @@
   </parent>
   <artifactId>org.eclipse.viatra.dse.base</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <build>
+    <resources>
+      <resource>
+        <directory>src</directory>
+      </resource>
+     </resources>
+  </build>
 </project>
