[431909] Implement initial version of whitelist for pure method calls Mark some java.lang.Math & java.lang.String methods as pure

--- a/plugins/org.eclipse.incquery.patternlanguage/plugin.xml
+++ b/plugins/org.eclipse.incquery.patternlanguage/plugin.xml
@@ -32,9 +32,458 @@
   </extension>
   <extension
         point="org.eclipse.incquery.patternlanguage.purewhitelist">
-     <whitelist
-           whitelistClass="org.eclipse.incquery.patternlanguage.validation.whitelist.JavaLangWhitelist">
-     </whitelist>
+     <pure-element
+           fully-qualified-name="java.lang.Math.sin(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.cos(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.tan(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.asin(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.acos(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.atan(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.tan(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.toRadians(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.exp(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.log(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.log10(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.sqrt(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.cbrt(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.IEEEremainder(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.ceil(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.floor(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.rint(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.atan2(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.pow(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.round(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.round(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.abs(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.abs(long)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.abs(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.abs(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.max(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.max(long, long)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.max(float, float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.max(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.min(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.min(long, long)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.min(float, float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.min(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.ulp(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.ulp(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.signum(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.signum(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.sinh(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.cosh(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.tanh(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.hypot(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.expm1(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.log1p(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.copySign(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.copySign(float, float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.getExponent(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.getExponent(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.nextAfter(double, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.nextAfter(float, double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.nextUp(double)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.nextUp(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.scalb(double, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.Math.scalb(float, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.length()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.isEmpty()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.charAt(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.codePointAt(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.codePointBefore(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.codePointCount(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.offsetByCodePoints(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.getBytes(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.getBytes(Charset)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.getBytes()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.equals(Object)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.contentEquals(StringBuffer)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.contentEquals(CharSequence)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.equalsIgnoreCase(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.compareTo(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.compareToIgnoreCase(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.regionMatches(int, String, int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.regionMatches(boolean, int, String, int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.startsWith(String, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.startsWith(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.endsWith(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.indexOf(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.indexOf(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.lastIndexOf(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.lastIndexOf(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.indexOf(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.indexOf(String, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.lastIndexOf(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.lastIndexOf(String, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.substring(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.substring(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.subSequence(int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.concat(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.replace(char, char)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.matches(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.contains(CharSequence)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.replaceFirst(String, String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.replaceAll(String, String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.replace(CharSequence, CharSequence)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.split(String, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.split(String)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.toLowerCase(Locale)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.toLowerCase()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.toUpperCase(Locale)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.toUpperCase()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.trim()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.toCharArray()"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.format(String, Object...)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.format(Locale, String, Object...)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(Object)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(char[])"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(char[], int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.copyValueOf(char[], int, int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.copyValueOf(char[])"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(boolean)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(char)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(int)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(long)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(float)"
+           type="method">
+     </pure-element>
+     <pure-element
+           fully-qualified-name="java.lang.String.valueOf(double)"
+           type="method">
+     </pure-element>
   </extension>
 
 </plugin>
