--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -268,6 +268,7 @@
 				<module>../../plugins/org.eclipse.incquery.viewers.tooling.ui</module>
 				<module>../../plugins/org.eclipse.incquery.viewers.runtime.zest</module>
 				<module>../../plugins/org.eclipse.incquery.viewers.tooling.ui.zest</module>
+				<module>../../tests/org.eclipse.incquery.patternlanguage.tests</module>
 				<module>../../tests/org.eclipse.incquery.patternlanguage.emf.tests</module>
 				<module>../../tests/org.eclipse.incquery.runtime.tests</module>
 				<module>../../tests/org.eclipse.incquery.runtime.base.itc.tests</module>
