[467392] updated generated editor

--- a/tests/org.eclipse.incquery.snapshot.editor/plugin.properties
+++ b/tests/org.eclipse.incquery.snapshot.editor/plugin.properties
@@ -4,10 +4,10 @@
 #
 # $Id$
 
-pluginName = Eiqsnapshot Editor
-providerName = www.example.org
+pluginName = EMF-IncQuery Snapshot Editor
+providerName = The Eclipse EMF-IncQuery Project
 
-_UI_EIQSnapshotEditor_menu = &EIQSnapshot Editor
+_UI_EIQSnapshotEditor_menu = &EMF-IncQuery Snapshot Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -30,14 +30,14 @@ _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
 
-_UI_Wizard_category = Example EMF Model Creation Wizards
+_UI_Wizard_category = EMF-IncQuery
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_EIQSnapshotModelWizard_label = EIQSnapshot Model
-_UI_EIQSnapshotModelWizard_description = Create a new EIQSnapshot model
+_UI_EIQSnapshotModelWizard_label = EMF-IncQuery Snapshot Model
+_UI_EIQSnapshotModelWizard_description = Create a new EMF-IncQuery Snapshot model
 
-_UI_EIQSnapshotEditor_label = EIQSnapshot Model Editor
+_UI_EIQSnapshotEditor_label = EMF-IncQuery Snapshot Model Editor
 
 _UI_EIQSnapshotEditorFilenameDefaultBase = My
 _UI_EIQSnapshotEditorFilenameExtensions = eiqsnapshot
