--- a/tests/org.eclipse.incquery.snapshot.editor/plugin.xml
+++ b/tests/org.eclipse.incquery.snapshot.editor/plugin.xml
@@ -11,15 +11,12 @@
 <plugin>
 
    <extension point="org.eclipse.ui.newWizards">
-      <category
-            id="org.eclipse.emf.ecore.Wizard.category.ID"
-            name="%_UI_Wizard_category"/>
       <wizard
             id="org.eclipse.incquery.snapshot.EIQSnapshot.presentation.EIQSnapshotModelWizardID"
             name="%_UI_EIQSnapshotModelWizard_label"
             class="org.eclipse.incquery.snapshot.EIQSnapshot.presentation.EIQSnapshotModelWizard"
-            category="org.eclipse.emf.ecore.Wizard.category.ID"
-            icon="icons/full/obj16/EIQSnapshotModelFile.gif">
+            category="org.eclipse.incquery.tooling.ui.category"
+            icon="icons/logo2.png">
          <description>%_UI_EIQSnapshotModelWizard_description</description>
          <selection class="org.eclipse.core.resources.IResource"/>
       </wizard>
@@ -29,7 +26,7 @@
       <editor
             id="org.eclipse.incquery.snapshot.EIQSnapshot.presentation.EIQSnapshotEditorID"
             name="%_UI_EIQSnapshotEditor_label"
-            icon="icons/full/obj16/EIQSnapshotModelFile.gif"
+            icon="icons/logo2.png"
             extensions="eiqsnapshot"
             class="org.eclipse.incquery.snapshot.EIQSnapshot.presentation.EIQSnapshotEditor"
             contributorClass="org.eclipse.incquery.snapshot.EIQSnapshot.presentation.EIQSnapshotActionBarContributor">
