--- a/plugins/org.eclipse.incquery.facet.browser/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/plugins/org.eclipse.incquery.facet.browser/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,6 +1,6 @@
 analyseLocally=false
 eclipse.preferences.version=1
-projectArtifactId=org.eclipse.incquery.runtime.graphiti
+projectArtifactId=org.eclipse.incquery.facet.browser
 projectBranch=
 projectGroupId=org.eclipse.incquery
 serverUrl=https\://build.inf.mit.bme.hu/sonar
